--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,6 +32,17 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+
+  <!--Google tag(gtag.js)-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-89L0L1GCNH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-89L0L1GCNH');
+  </script>
+
   <title>Aclimate</title>
 </head>
 
