name changed and some news modified

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -46,7 +46,7 @@
     }(window.location))
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
-  <title>Aclimate</title>
+  <title>AClimate</title>
 </head>
 
 <body>
